--- a/src/components/core/index.astro
+++ b/src/components/core/index.astro
@@ -10,4 +10,5 @@ export { default as Sidebar } from "./Sidebar/index.astro"
 export { default as SwitchScheme } from "./SwitchScheme.astro"
 export { default as Typography } from "./Typography/index.astro"
 export { default as Gallery } from "./Gallery/index.astro"
+export { default as ProjectInfo } from "./ProjectInfo.astro"
 ---
