--- a/src/components/sections/ProductDetail.astro
+++ b/src/components/sections/ProductDetail.astro
@@ -23,7 +23,7 @@ const paymentButtons: ProductPaymentButtons = {
 }
 ---
 
-<section class="flex items-center justify-center px-5 py-14 md:pb-40">
+<section class="flex items-center justify-center py-14 md:pb-40">
 	<div class="container">
 		<div class="mb-20 grid grid-cols-1 gap-12 md:grid-cols-2 md:gap-20">
 			<div class="relative">
@@ -40,7 +40,7 @@ const paymentButtons: ProductPaymentButtons = {
 				<div class="sticky top-[100px] flex flex-col gap-6">
 					<Typography
 						type="h1"
-						class="text-balance dark:text-white"
+						class="h2 text-balance dark:text-white"
 						transition:name={`product-title-${name}`}
 					>
 						{title}
