--- a/src/components/sections/ProjectDetail.astro
+++ b/src/components/sections/ProjectDetail.astro
@@ -5,13 +5,13 @@ const { project } = Astro.props
 const { images, title, name, Content } = project || {}
 ---
 
-<section class="flex items-center justify-center px-5 py-14 md:pb-40">
+<section class="flex items-center justify-center pb-14 md:pb-40">
 	<div class="container">
-		<div class="relative mb-16">
+		<div class="relative mx-auto mb-5 md:mb-16">
 			<Image
 				src={images.large}
 				alt={title}
-				class="h-full w-full rounded-4xl object-cover"
+				class="h-full w-full rounded-2xl object-cover md:rounded-4xl"
 				transition:name={`project-image-${name}`}
 				width={1920}
 				height={1080}
