--- a/src/components/sections/index.astro
+++ b/src/components/sections/index.astro
@@ -1,6 +1,6 @@
 ---
 export { default as SectionAbout } from "./About.astro"
-export { default as SectionAllProjects } from "./AllProjects.astro"
+export { default as SectionAllProjects } from "./ProjectsAll.astro"
 export { default as SectionExperience } from "./Experience.astro"
 export { default as SectionHero } from "./Hero.astro"
 export { default as SectionProjectDetail } from "./ProjectDetail.astro"
