--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import { ClientRouter } from "astro:transitions"
+import { SEO } from "astro-seo"
 import "@fontsource-variable/syne"
 
 import { getLangFromUrl } from "@/i18n/utils"
@@ -8,28 +9,56 @@ import Header from "@/components/shared/Header.astro"
 import Footer from "@/components/shared/Footer.astro"
 
 import "@/css/global.css"
+import { SEO_DATA } from "@/constants"
 
 interface Props {
 	title: string
 	showHeader?: boolean
 	showFooter?: boolean
+	description?: string
+	og_image?: string
+	og_title?: string
+	og_type?: string
+	canonical?: string
 }
 
 const { props } = Astro
-
-const { title, showHeader = true, showFooter = true } = props
 const lang = getLangFromUrl(Astro.url)
+
+const {
+	title = SEO_DATA[lang].title,
+	description = SEO_DATA[lang].description,
+	og_image = SEO_DATA[lang].image,
+	og_title = SEO_DATA[lang].title,
+	og_type = "website",
+	canonical = SEO_DATA[lang].canonical_url,
+	showHeader = true,
+	showFooter = true,
+} = props
 ---
 
 <!doctype html>
 <html lang={lang} class="dark">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<SEO
+			title={title}
+			description={description}
+			canonical={canonical}
+			openGraph={{
+				basic: {
+					title: og_title || title,
+					image: og_image,
+					type: og_type,
+				},
+				optional: {
+					description,
+				},
+			}}
+		/>
 		<ClientRouter />
 	</head>
 
