--- a/src/pages/shop/index.astro
+++ b/src/pages/shop/index.astro
@@ -1,8 +1,7 @@
 ---
 import ProductsAll from "@/components/sections/ProductsAll.astro"
-import HeaderPage from "@/components/ui/HeaderPage.astro"
 import { getLangFromUrl, useTranslatedPath, useTranslations } from "@/i18n/utils"
-import Layout from "@/layouts/Layout.astro"
+import PageLayout from "@/layouts/PageLayout.astro"
 
 const lang = getLangFromUrl(Astro.url)
 const t = useTranslations(lang)
@@ -24,9 +23,6 @@ const breadcrumbs = [
 ]
 ---
 
-<Layout title="Israel Larrondo | Shop">
-	<div class="dark:bg-dark relative z-10 bg-white">
-		<HeaderPage title={t("shop.title")} {breadcrumbs} />
-		<ProductsAll />
-	</div>
-</Layout>
+<PageLayout title="Israel Larrondo | Shop" pageTitle={t("shop.title")} {breadcrumbs}>
+	<ProductsAll />
+</PageLayout>
