--- a/src/components/core/SwitchScheme.astro
+++ b/src/components/core/SwitchScheme.astro
@@ -10,7 +10,7 @@ import { TbMoonFilled, TbMoonOff } from "react-icons/tb"
 </div>
 
 <script>
-	import { Cookies } from "../../utils"
+	import Cookies from "js-cookie"
 
 	document.addEventListener("astro:page-load", () => {
 		const documentClasses = document.documentElement.classList
